# graph-api

./: .gitignore  .mergify.yml  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  index.html  introduction.html  introduction_example.rs  justfile  print.html  release-plz.toml  searchindex.js  toc.html  toc.js
graph-api-benches/: CHANGELOG.md  Cargo.toml  README.md
graph-api-benches/benches/: graph_benchmarks.rs
graph-api-benches/src/: construction.rs  edge.rs  generators.rs  index.rs  lib.rs  mutation.rs  query.rs  scale.rs  traversal.rs  vertex.rs
graph-api-benches/src/index/: mod.rs
graph-api-benches/src/index/edge_label/: mod.rs
graph-api-benches/src/index/no_index/: mod.rs
graph-api-benches/src/index/vertex_full_text/: mod.rs
graph-api-benches/src/index/vertex_hash/: mod.rs
graph-api-benches/src/index/vertex_label/: mod.rs
graph-api-benches/src/index/vertex_range/: mod.rs
graph-api-book/: Cargo.toml  README.md  SPEC.md  book.toml  mdbook-include-fn
graph-api-book/src/: SUMMARY.md  diagram-guidelines.md  introduction.md  introduction_example.rs  lib.rs  mascot.png~  standard_model.rs
graph-api-book/src/appendix/: performance_specs.md
graph-api-book/src/css/: images.css
graph-api-book/src/implementation/: benchmarks.md  features.md  graphs.md  guide.md  indexes.md  performance.md  testing.md
graph-api-book/src/reference/: api.md  derive_macros.md  implementations.md  support_traits.md
graph-api-book/src/reference/derive_macros/: edge_ext.md  vertex_ext.md
graph-api-book/src/reference/implementations/: pet_graph.md  petgraph.md  simple_graph.md
graph-api-book/src/user_guide/: basic_operations.md  create_graph_example.rs  defining_a_model.md  derive_macros.md  getting_started.md  getting_started_example.rs  indexing_example.rs  mod.rs  model_definition.rs  property_graphs.md  traversal.md
graph-api-book/src/user_guide/basic_operations/: create_graph.rs  edges_query.rs  mod.rs  mutate_graph.rs  vertices_query.rs
graph-api-book/src/user_guide/defining_a_model/: mod.rs  social_media_model.rs
graph-api-book/src/user_guide/getting_started/: first_graph.rs  mod.rs
graph-api-book/src/user_guide/property_graphs/: basic_model.rs  combining_indexes.md  combining_indexes.rs  full_text_index.md  full_text_index.rs  hash_index.md  mod.rs  no_index.md  no_index.rs  ordered_index.md  ordered_index.rs  range_index.md  standard_index.md  standard_index.rs
graph-api-book/src/user_guide/property_graphs/full_text_index/: full_text_index_example.rs
graph-api-book/src/user_guide/property_graphs/hash_index/: hash_index.rs  hash_index_example.rs  mod.rs
graph-api-book/src/user_guide/property_graphs/no_index/: no_index_example.rs
graph-api-book/src/user_guide/property_graphs/range_index/: mod.rs  range_index.rs  (+1 more)
graph-api-book/src/user_guide/traversal/: basic_example.rs  context_example.rs  mod.rs
graph-api-book/src/user_guide/walker/: basic_traversal_example.rs  best_practices.md  context.md  context_system.md  detour_example.rs  multi_step_example.rs  overview.md  steps.md
graph-api-book/theme/: custom.css
graph-api-derive/: CHANGELOG.md  Cargo.toml  README.md
graph-api-derive/src/: lib.rs  model.rs  render.rs
graph-api-derive/src/snapshots/: graph_api_derive__model__test__parse_enum.snap  graph_api_derive__render__tests__render_edge.snap  graph_api_derive__render__tests__render_vertex.snap
graph-api-derive/tests/: test.rs
graph-api-derive/tests/ui/: model.rs  private_model.rs  pub_super_model.rs
graph-api-lib/: CHANGELOG.md  Cargo.toml  README.md
graph-api-lib/examples/: boxed.rs  collect.rs  context.rs  control_flow.rs  count.rs  custom_step.rs  dbg.rs  default_context.rs  detour.rs  edges.rs  filter.rs  first.rs  fold.rs  head.rs  into_iter.rs  limit.rs  map.rs  mutate.rs  mutate_context.rs  probe.rs  reduce.rs  tail.rs  take.rs  vertices.rs  vertices_by_id.rs
graph-api-lib/src/: element.rs  error.rs  graph.rs  index.rs  label.rs  lib.rs  support.rs  value.rs
graph-api-lib/src/petgraph/: mod.rs
graph-api-lib/src/search/: edge.rs  mod.rs  vertex.rs
graph-api-lib/src/walker/: builder.rs  context.rs  detour.rs  edges.rs  empty.rs  endpoints.rs  filter.rs  from_edge_walker.rs  from_vertex_walker.rs  iter.rs  limit.rs  mod.rs  probe.rs  vertex_iter.rs  vertices.rs
graph-api-lib/src/walker/steps/: README.md  SPEC.md  boxed.rs  collect.rs  context.rs  control_flow.rs  count.rs  dbg.rs  default_context.rs  detour.rs  edges.rs  empty.rs  endpoints.rs  filter.rs  first.rs  fold.rs  head.rs  into_iter.rs  limit.rs  map.rs  mod.rs  mutate.rs  mutate_context.rs  probe.rs  reduce.rs  tail.rs  take.rs  vertices.rs  vertices_by_id.rs
graph-api-petgraph/: CHANGELOG.md  Cargo.toml  README.md
graph-api-petgraph/benches/: petgraph_benchmarks.rs
graph-api-petgraph/src/: lib.rs
graph-api-simplegraph/: CHANGELOG.md  Cargo.toml  README.md
graph-api-simplegraph/benches/: simplegraph_benchmarks.rs
graph-api-simplegraph/proptest-regressions/: lib.txt
graph-api-simplegraph/src/: id.rs  lib.rs  tombstone_vec.rs
graph-api-simplegraph/src/graph/: debug.rs  iter.rs  label.rs  mod.rs
graph-api-simplegraph/src/index/: full_text.rs  hash.rs  mod.rs  ordered.rs  range.rs  unordered.rs
graph-api-test/: CHANGELOG.md  Cargo.toml  README.md
graph-api-test/benches/: graph_benchmarks.rs
graph-api-test/src/: collect.rs  context.rs  count.rs  detour.rs  drain.rs  edges.rs  filter.rs  filter_derive.rs  first.rs  fold.rs  fuzz.rs  graph.rs  lib.rs  limit.rs  long.rs  long_boxed.rs  mutation.rs  probe.rs  reduce.rs  vertices.rs
graph-api-test/src/bench/: construction.rs  edge.rs  generators.rs  index.rs  mod.rs  mutation.rs  query.rs  scale.rs  traversal.rs  vertex.rs
graph-api-test/src/graph/: mod.rs
graph-api-test/src/index/: edge_label.rs  mod.rs  vertex_default.rs  vertex_full_text.rs  vertex_hash.rs  vertex_label.rs  vertex_ordered.rs  vertex_range.rs
graph-api-test/src/steps/: boxed.rs  context.rs  control_flow.rs  edges.rs  first.rs  mod.rs  mutate_context.rs  reduce.rs  take.rs  vertices.rs
html/: lib.rs  (+4 more)
(+244 files in other folders)
