[workspace]
members = [
    "graph-api-lib",
    "graph-api-derive",
    "graph-api-test",
    "graph-api-benches",
    "graph-api-petgraph",
    "graph-api-simplegraph",
    "graph-api-book",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Bryn Cooke"]
license = "Apache-2.0"
repository = "https://github.com/BrynCooke/graph-api"
documentation = "https://bryncooke.github.io/graph-api/"
edition = "2024"
rust-version = "1.80"

[workspace.dependencies]
petgraph = "0.7.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
