[package]
name = "graph-api-benches"
version = "0.1.2"
edition = "2024"
description = "Benchmarking utilities and performance tests for the graph-api ecosystem"
authors = ["Bryn Cooke"]
license = "Apache-2.0"
repository = "https://github.com/BrynCooke/graph-api"
documentation = "https://bryncooke.github.io/graph-api/"
readme = "README.md"
keywords = ["graph", "database", "benchmark", "performance", "testing"]
categories = ["data-structures", "development-tools::profiling"]

[features]
default = []
vertex-hash-index = []
vertex-label-index = []
vertex-full-text-index = []
vertex-range-index = []
edge-label-index = []
edge-hash-index = []
edge-range-index = []
graph-clear = []

[lib]
bench = false


[dependencies]
graph-api-lib = { version = "0.1.2", path = "../graph-api-lib" }
graph-api-derive = { version = "0.1.1", path = "../graph-api-derive" }
uuid = { version = "1.11.0", features = ["v4"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.9" }
graph-api-test = { version = "0.1.2", path = "../graph-api-test" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "graph_benchmarks"
harness = false
