[package]
name = "graph-api-book"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph-api-derive = { path = "../graph-api-derive" }
graph-api-lib = { path = "../graph-api-lib" }
graph-api-simplegraph = { path = "../graph-api-simplegraph" }
uuid = "1.16.0"
