[package]
name = "graph-api-book"
version = "0.1.0"
edition = "2024"
description = "Documentation and examples for the graph-api ecosystem as an mdBook"
authors = ["Bryn Cooke"]
license = "Apache-2.0"
repository = "https://github.com/BrynCooke/graph-api"
documentation = "https://bryncooke.github.io/graph-api/"
readme = "SPEC.md"
keywords = ["graph", "database", "documentation", "examples", "mdbook"]
categories = ["data-structures", "development-tools::documentation"]
publish = false


[dependencies]
graph-api-derive = { path = "../graph-api-derive" }
graph-api-lib = { path = "../graph-api-lib" }
graph-api-simplegraph = { path = "../graph-api-simplegraph" }
uuid = "1.16.0"
