[package]
name = "graph-api-derive"
version = "0.1.3"
edition = "2024"
description = "Derive macros for the graph-api ecosystem - provides type-safe vertex and edge extensions"
authors = ["Bryn Cooke"]
license = "Apache-2.0"
repository = "https://github.com/BrynCooke/graph-api"
documentation = "https://bryncooke.github.io/graph-api/"
readme = "README.md"
keywords = ["graph", "database", "derive", "macros", "proc-macro"]
categories = ["data-structures", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.82"
serde = { version = "1.0.202", features = ["derive"] }
case = "1.0.0"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }
trybuild = "1.0"
proc-macro2 = { version = "1.0.82", features = [] }
prettyplease = "0.2.29"
graph-api-lib = { path = "../graph-api-lib" }
