[package]
name = "graph-api-lib"
version = "0.1.0"
edition = "2021"

[features]
petgraph = [
    "dep:petgraph"
]

[dependencies]
petgraph = { workspace = true, optional = true }
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "2.0.3"
derivative = "2.2.0"
graph-api-derive = { path = "../graph-api-derive" }
include-doc = "0.2.1"

[dev-dependencies]
graph-api-simplegraph = { path = "../graph-api-simplegraph"}
graph-api-test = { path = "../graph-api-test"}
