[package]
name = "graph-api-lib"
version = "0.1.1"
edition = "2024"
description = "Core library for the graph-api ecosystem - a flexible, type-safe API for working with in-memory graphs in Rust"
authors = ["Bryn Cooke"]
license = "Apache-2.0"
repository = "https://github.com/BrynCooke/graph-api"
documentation = "https://bryncooke.github.io/graph-api/"
readme = "README.md"
keywords = ["graph", "database", "traversal", "data-structure"]
categories = ["data-structures", "memory-management"]

[features]
petgraph = [
    "dep:petgraph"
]

[dependencies]
petgraph = { workspace = true, optional = true }
uuid = { version = "1.11.0", features = ["v4"] }
derivative = "2.2.0"
include-doc = "0.2.1"

[dev-dependencies]
graph-api-simplegraph = { path = "../graph-api-simplegraph" }
graph-api-test = { path = "../graph-api-test" }
