[package]
name = "graph-api-petgraph"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
graph-api-lib = { path = "../graph-api-lib", features = ["petgraph"] }
petgraph = { workspace = true }

[dev-dependencies]
graph-api-test = { path = "../graph-api-test", features = ["graph-clear"] }
graph-api-benches = { path = "../graph-api-benches", features = ["graph-clear"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "petgraph_benchmarks"
harness = false
