[package]
name = "graph-api-petgraph"
version = "0.1.3"
edition = "2024"
description = "Integration between graph-api and petgraph - use graph-api's traversal system with petgraph structures"
authors = ["Bryn Cooke"]
license = "Apache-2.0"
repository = "https://github.com/BrynCooke/graph-api"
documentation = "https://bryncooke.github.io/graph-api/"
readme = "README.md"
keywords = ["graph", "database", "petgraph", "adapter", "traversal"]
categories = ["data-structures", "algorithms"]

[lib]
bench = false

[dependencies]
graph-api-lib = { version = "0.1.3", path = "../graph-api-lib", features = ["petgraph"] }
petgraph = { workspace = true }

[dev-dependencies]
graph-api-test = { version = "0.1.3", path = "../graph-api-test", features = ["graph-clear"] }
graph-api-benches = { version = "0.1.3", path = "../graph-api-benches", features = ["graph-clear"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "petgraph_benchmarks"
harness = false
