[package]
name = "graph-api-simplegraph"
version = "0.1.2"
edition = "2024"
description = "A simple, efficient graph implementation for the graph-api ecosystem with support for indexing"
authors = ["Bryn Cooke"]
license = "Apache-2.0"
repository = "https://github.com/BrynCooke/graph-api"
documentation = "https://bryncooke.github.io/graph-api/"
readme = "README.md"
keywords = ["graph", "database", "in-memory", "data-structure", "indexed"]
categories = ["data-structures", "memory-management"]


[lib]
bench = false

[dependencies]
graph-api-lib = { version = "0.1.2", path = "../graph-api-lib" }
paste = "1.0.15"
fastbloom = "0.9.0"
rphonetic = "3.0.1"
smallbox = "0.8.6"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
graph-api-test = { path = "../graph-api-test", features = ["vertex-hash-index", "vertex-label-index", "vertex-full-text-index", "vertex-range-index", "edge-label-index"] }
graph-api-benches = { path = "../graph-api-benches", features = ["vertex-hash-index", "vertex-label-index", "vertex-full-text-index", "vertex-range-index", "edge-label-index"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "simplegraph_benchmarks"
harness = false
