[package]
name = "graph-api-test"
version = "0.1.0"
edition = "2024"

[features]
default = []
vertex-hash-index = []
vertex-label-index = []
vertex-full-text-index = []
vertex-range-index = []
edge-label-index = []
edge-index = []
edge-range-index = []
graph-clear = []


[dependencies]
graph-api-lib = { path = "../graph-api-lib" }
graph-api-derive = { path = "../graph-api-derive" }
thiserror = "2.0.3"
proptest = "1.5.0"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
