[package]
name = "graph-api-test"
version = "0.2.1"
edition = "2024"
description = "Test utilities and property-based testing for the graph-api ecosystem"
authors = ["Bryn Cooke"]
license = "Apache-2.0"
repository = "https://github.com/BrynCooke/graph-api"
documentation = "https://bryncooke.github.io/graph-api/"
readme = "README.md"
keywords = ["graph", "database", "testing", "property-testing", "fuzzing"]
categories = ["data-structures", "development-tools::testing"]

[features]
default = []
vertex-hash-index = []
vertex-label-index = []
vertex-full-text-index = []
vertex-range-index = []
edge-label-index = []
edge-index = []
edge-range-index = []
graph-clear = []
element-removal = []


[dependencies]
graph-api-lib = { version = "0.2.1", path = "../graph-api-lib" }
graph-api-derive = { version = "0.1.4", path = "../graph-api-derive" }
thiserror = "2.0.3"
proptest = "1.5.0"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
